feat(swagger): swagger docs reveals
